rmk-macro/tests/compile_fail/event_invalid_syntax.rs
use rmk_macro::event;

#[event(subs)]
#[derive(Clone, Copy, Debug)]
pub struct BareSubs;

#[event(channel_size = 8 subs = 4)]
#[derive(Clone, Copy, Debug)]
pub struct MissingComma;

fn main() {}
